--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,11 @@
-<p>not-found works!</p>
+<div class="page-not-found">
+  <div class="circle-wrapper">
+    <div class="circle">
+      <fa-icon [icon]="icons.no_result"></fa-icon>
+      <strong>404, the page not found</strong>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eveniet delectus nihil labore, est impedit
+        fugit
+      </p>
+    </div>
+  </div>
+</div>
