--- a/src/styles/kendo-styles/_kendo-style.scss
+++ b/src/styles/kendo-styles/_kendo-style.scss
@@ -1,6 +1,6 @@
 // component
 @import "./components/paginator";
-
+@import "./components/header";
 
 @import "./variables";
 @import "./mixins";
@@ -8,5 +8,3 @@
 @import "./button";
 @import "./input";
 @import "./icon";
-
-
