--- a/src/app/shared/components/spinner-wrapper/spinner-wrapper.component.scss
+++ b/src/app/shared/components/spinner-wrapper/spinner-wrapper.component.scss
@@ -1,14 +1,13 @@
 :host {
   display: table-row;
   position: relative;
-  height: 12.5rem;
+  height: 8rem;
 }
 
 td {
-  text-align: center;
   position: absolute;
-  margin: auto;
+  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
-  top: 60%;
 }
