--- a/src/styles/kendo-styles/_kendo-style.scss
+++ b/src/styles/kendo-styles/_kendo-style.scss
@@ -1,6 +1,7 @@
-// component
-@import "./components/paginator";
+// components
 @import "./components/header";
+@import "./components/not-found";
+@import "./components/paginator";
 
 @import "./variables";
 @import "./mixins";
