--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -3,9 +3,7 @@
     <div class="circle">
       <fa-icon [icon]="icons.no_result"></fa-icon>
       <strong>404, the page not found</strong>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eveniet delectus nihil labore, est impedit
-        fugit
-      </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eveniet delectus nihil labore, est impedit</p>
     </div>
   </div>
 </div>
