--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -3,6 +3,7 @@
   <app-sdwi-form-field>
     <app-sdwi-label>Label</app-sdwi-label>
     <input formControlName="name">
+    <app-sdwi-error>{{getError()}}</app-sdwi-error>
   </app-sdwi-form-field>
 
   <app-sdwi-form-field>
