--- a/src/styles/kendo-styles/components/_form-field.scss
+++ b/src/styles/kendo-styles/components/_form-field.scss
@@ -21,6 +21,9 @@ app-sdwi-form-field {
   }
 
   app-sdwi-error {
+    width: 100%;
+    height: 0.8rem;
+    overflow: hidden;
     position: absolute;
     bottom: 0;
     left: 0;
