--- a/src/styles/kendo-styles/components/_form-field.scss
+++ b/src/styles/kendo-styles/components/_form-field.scss
@@ -22,10 +22,9 @@ app-sdwi-form-field {
 
   app-sdwi-error {
     width: 100%;
-    height: 0.8rem;
     overflow: hidden;
     position: absolute;
-    bottom: 0;
+    top: 3.6rem;
     left: 0;
     display: flex;
     flex-flow: row nowrap;
