--- a/src/app/shared/components/spinner-wrapper/spinner-wrapper.component.html
+++ b/src/app/shared/components/spinner-wrapper/spinner-wrapper.component.html
@@ -1,3 +1,10 @@
 <td>
-  <ngx-spinner [name]="name"></ngx-spinner>
+  <ngx-spinner [name]="name">
+    <ng-container *ngIf="title; else elseTemplate">
+      {{ title }}
+    </ng-container>
+    <ng-template #elseTemplate>
+      <ng-content></ng-content>
+    </ng-template>
+  </ngx-spinner>
 </td>
