--- a/src/styles/kendo-styles/_mixins.scss
+++ b/src/styles/kendo-styles/_mixins.scss
@@ -13,6 +13,7 @@
   color: $default-text-color;
   border-color: $default-border-color;
   background-color: #fff;
+  font-size: 0.85em;
 
   &:hover {
     border-color: $default-border-color-hover;
