--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -4,3 +4,12 @@ form {
   font-size: 0.875rem;
   line-height: 1.4285714286;
 }
+
+.card {
+  margin: 20px;
+  border: 1px solid gray;
+}
+
+.light-border {
+  border: 1px solid lightcoral;
+}
