--- a/src/app/pages/dessert/dessert.component.html
+++ b/src/app/pages/dessert/dessert.component.html
@@ -64,16 +64,16 @@
     <input [formControl]="rowForm.controls.name" class="sdwi-input">
   </td>
   <td>
-    <app-sdwi-numeric-input [control]="rowForm.controls.calories"></app-sdwi-numeric-input>
+    <app-numeric-input [control]="rowForm.controls.calories"></app-numeric-input>
   </td>
   <td>
-    <app-sdwi-numeric-input [control]="rowForm.controls.fat"></app-sdwi-numeric-input>
+    <app-numeric-input [control]="rowForm.controls.fat"></app-numeric-input>
   </td>
   <td>
-    <app-sdwi-numeric-input [control]="rowForm.controls.carbs"></app-sdwi-numeric-input>
+    <app-numeric-input [control]="rowForm.controls.carbs"></app-numeric-input>
   </td>
   <td>
-    <app-sdwi-numeric-input [control]="rowForm.controls.protein"></app-sdwi-numeric-input>
+    <app-numeric-input [control]="rowForm.controls.protein"></app-numeric-input>
   </td>
   <td>
     <div class="cell-buttons">
