--- a/src/app/shared/components/sdwi-paginator/sdwi-paginator.component.html
+++ b/src/app/shared/components/sdwi-paginator/sdwi-paginator.component.html
@@ -37,7 +37,7 @@
 
 <ng-template #inputTypePaginatorTemplate>
   <div class="paginator-input-model">
-    <span>Page</span><app-sdwi-numeric-input [max]="pageCount"></app-sdwi-numeric-input><span> of 13</span>
+    <span>Page</span><app-numeric-input [max]="pageCount"></app-numeric-input><span> of 13</span>
   </div>
 </ng-template>
 
