--- a/src/styles/kendo-styles/_table.scss
+++ b/src/styles/kendo-styles/_table.scss
@@ -17,7 +17,7 @@
       &.selectable {
         tbody {
           tr:hover {
-            background-color: #e3e3e3;
+            background-color: #ededed;
           }
         }
       }
