--- a/src/styles/kendo-styles/components/_paginator.scss
+++ b/src/styles/kendo-styles/components/_paginator.scss
@@ -69,7 +69,7 @@
     font-size: 13.5px;
     line-height: 1.4285714286;
 
-    app-sdwi-numeric-input {
+    app-numeric-input {
       margin: 0 7px;
     }
   }
