--- a/src/app/pages/dessert/dessert.component.html
+++ b/src/app/pages/dessert/dessert.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-viewer [title]="viewerTitle">
-    <div class="table">
+    <div class="table-wrapper">
       <div class="table-header">
       </div>
 
