--- a/src/app/pages/clients/clients.component.html
+++ b/src/app/pages/clients/clients.component.html
@@ -9,7 +9,13 @@
             <tr>
               <th *ngFor="let column of clientsColumn">{{ column }}</th>
               <th>
-                <button [disabled]="isCreatingClient" (click)="handleAddClient()" class="sdwi-button">Add new</button>
+                <button
+                  [disabled]="isCreatingClient"
+                  (click)="handleAddClient()"
+                  class="sdwi-button"
+                >
+                  Add new
+                </button>
               </th>
             </tr>
             <!-- <tr>
@@ -23,13 +29,23 @@
           </thead>
           <tbody>
             <ng-container #clientCreateCnt></ng-container>
-            <tr *ngFor="let client of clients; let i=index">
-              <ng-container [ngTemplateOutletContext]="{ index: i, client: client }"
-                [ngTemplateOutlet]="i === editRowIndex ? rowEditTpl : rowDisplayTpl"></ng-container>
+            <tr *ngFor="let client of clients; let i = index">
+              <ng-container
+                [ngTemplateOutletContext]="{ index: i, client: client }"
+                [ngTemplateOutlet]="
+                  i === editRowIndex ? rowEditTpl : rowDisplayTpl
+                "
+              ></ng-container>
             </tr>
-            <app-spinner-wrapper *ngIf="!clients" name="clients-base-table" title="Loading, please wait">
+            <app-spinner-wrapper
+              *ngIf="!clients"
+              name="clients-base-table"
+              title="Loading, please wait"
+            >
             </app-spinner-wrapper>
-            <app-empty-table-state *ngIf="clients ? !clients.length : false"></app-empty-table-state>
+            <app-empty-table-state
+              *ngIf="clients ? !clients.length : false"
+            ></app-empty-table-state>
           </tbody>
         </table>
       </div>
@@ -39,45 +55,78 @@
 
 <ng-template #rowDisplayTpl let-client="client" let-index="index">
   <td>{{ client.fullName }}</td>
-  <td>{{ client.DOB }}</td>
+  <td>{{ client.DOB | mask: dateMask }}</td>
   <td>{{ client.email }}</td>
-  <td>{{ client.lastSeenDate }}</td>
-  <td>{{ client.lastTransaction }}</td>
+  <td>{{ client.phoneNumber | mask: phoneNumberMask }}</td>
+  <td>{{ client.lastSeenDate | mask: dateMask }}</td>
+  <td>{{ client.lastTransaction | mask: dateMask }}</td>
   <td>{{ client.account }}</td>
   <td>{{ client.status }}</td>
   <td>
     <div class="cell-buttons">
-      <button (click)="handleShowEditModel(index, client)" class="sdwi-button danger">Edit</button>
-      <button (click)="handleDeleteDessert(client.id)" class="sdwi-button">Remove</button>
+      <button
+        (click)="handleShowEditModel(index, client)"
+        class="sdwi-button danger"
+      >
+        Edit
+      </button>
+      <button (click)="handleDeleteDessert(client.id)" class="sdwi-button">
+        Remove
+      </button>
     </div>
   </td>
 </ng-template>
 
 <ng-template #rowEditTpl let-client="client">
   <td>
-    <input [formControl]="clientEditForm.controls.fullName" class="sdwi-input">
+    <input
+      [formControl]="clientEditForm.controls.fullName"
+      class="sdwi-input"
+    />
   </td>
   <td>
-    <input [formControl]="clientEditForm.controls.DOB" class="sdwi-input">
+    <input [formControl]="clientEditForm.controls.DOB" class="sdwi-input" />
   </td>
   <td>
-    <input [value]="client.email" [formControl]="clientEditForm.controls.email" class="sdwi-input">
+    <input
+      [value]="client.email"
+      [formControl]="clientEditForm.controls.email"
+      class="sdwi-input"
+    />
   </td>
   <td>
-    <input [value]="client.lastSeenDate" [formControl]="clientEditForm.controls.lastSeenDate" class="sdwi-input">
+    <input
+      [value]="client.lastSeenDate"
+      [formControl]="clientEditForm.controls.lastSeenDate"
+      class="sdwi-input"
+    />
   </td>
   <td>
-    <input [value]="client.lastTransaction" [formControl]="clientEditForm.controls.lastTransaction" class="sdwi-input">
+    <input
+      [value]="client.lastTransaction"
+      [formControl]="clientEditForm.controls.lastTransaction"
+      class="sdwi-input"
+    />
   </td>
   <td>
-    <input [value]="client.account" [formControl]="clientEditForm.controls.account" class="sdwi-input">
+    <input
+      [value]="client.account"
+      [formControl]="clientEditForm.controls.account"
+      class="sdwi-input"
+    />
   </td>
   <td>
-    <input [value]="client.status" [formControl]="clientEditForm.controls.status" class="sdwi-input">
+    <input
+      [value]="client.status"
+      [formControl]="clientEditForm.controls.status"
+      class="sdwi-input"
+    />
   </td>
   <td>
     <div class="cell-buttons">
-      <button (click)="handleUpdateRow(client)" class="sdwi-button">Update</button>
+      <button (click)="handleUpdateRow(client)" class="sdwi-button">
+        Update
+      </button>
       <button (click)="handleCancelEdit()" class="sdwi-button">Cancel</button>
     </div>
   </td>
@@ -87,50 +136,87 @@
   <tr>
     <td>
       <app-form-field class="no-label">
-        <input #controlAnchor [formControl]="clientCreateForm.controls.fullName" class="sdwi-input" type="text">
+        <input
+          #controlAnchor
+          [formControl]="clientCreateForm.controls.fullName"
+          class="sdwi-input"
+          type="text"
+        />
         <app-field-error-label></app-field-error-label>
       </app-form-field>
     </td>
     <td>
       <app-form-field class="no-label">
-        <input #controlAnchor [formControl]="clientCreateForm.controls.dob" class="sdwi-input" type="text">
+        <input
+          #controlAnchor
+          [formControl]="clientCreateForm.controls.dob"
+          class="sdwi-input"
+          type="text"
+        />
         <app-field-error-label></app-field-error-label>
       </app-form-field>
     </td>
     <td>
       <app-form-field class="no-label">
-        <input #controlAnchor [formControl]="clientCreateForm.controls.email" class="sdwi-input" type="text">
+        <input
+          #controlAnchor
+          [formControl]="clientCreateForm.controls.email"
+          class="sdwi-input"
+          type="text"
+        />
         <app-field-error-label></app-field-error-label>
       </app-form-field>
     </td>
     <td>
       <app-form-field class="no-label">
-        <input #controlAnchor [formControl]="clientCreateForm.controls.lastSeenDate" class="sdwi-input" type="text">
+        <input
+          #controlAnchor
+          [formControl]="clientCreateForm.controls.lastSeenDate"
+          class="sdwi-input"
+          type="text"
+        />
         <app-field-error-label></app-field-error-label>
       </app-form-field>
     </td>
     <td>
       <app-form-field class="no-label">
-        <input #controlAnchor [formControl]="clientCreateForm.controls.lastTransaction" class="sdwi-input" type="text">
+        <input
+          #controlAnchor
+          [formControl]="clientCreateForm.controls.lastTransaction"
+          class="sdwi-input"
+          type="text"
+        />
         <app-field-error-label></app-field-error-label>
       </app-form-field>
     </td>
     <td>
       <app-form-field class="no-label">
-        <input #controlAnchor [formControl]="clientCreateForm.controls.account" class="sdwi-input" type="text">
+        <input
+          #controlAnchor
+          [formControl]="clientCreateForm.controls.account"
+          class="sdwi-input"
+          type="text"
+        />
         <app-field-error-label></app-field-error-label>
       </app-form-field>
     </td>
     <td>
       <app-form-field class="no-label">
-        <input #controlAnchor [formControl]="clientCreateForm.controls.status" class="sdwi-input" type="text">
+        <input
+          #controlAnchor
+          [formControl]="clientCreateForm.controls.status"
+          class="sdwi-input"
+          type="text"
+        />
         <app-field-error-label></app-field-error-label>
       </app-form-field>
     </td>
     <td>
       <div class="cell-buttons">
         <button (click)="handleCreate()" class="sdwi-button">Update</button>
-        <button (click)="handleCancelCreate()" class="sdwi-button">Cancel</button>
+        <button (click)="handleCancelCreate()" class="sdwi-button">
+          Cancel
+        </button>
       </div>
     </td>
   </tr>
